--- a/public/parser-blocking.html
+++ b/public/parser-blocking.html
@@ -31,8 +31,9 @@
     <h2>⏰Hello 23</h2>
 
     <h3>Loading our script here...</h3>
-    <!-- is this is the same as making a call to localhost:3000/regTest ? -->
+   
     <script src="http://localhost:3000/parser-blocker.js"></script>
+    <!-- <script src="parser-blocker.js"></script> -->
 
     <h2>⏰Hello 24</h2>
     <h2>⏰Hello 25</h2>
